@@ -1,308 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Red5 Testing Framework</title>
-</head>
-
-<body>
-
-<h1>Overview</h1>
-As of version 0.8, the Red5 Testing framework has been modified and updated.  The unit-tests have been updated to pass, and a automated system-testing and continuous integration framework has been added.
-<p>
-This document attempts to explain the thoughts and architecture involved so as to facilitate review by the Red5 core team and to get suggestions for whether to adopt or reject this change.</p>
-<h2>Red5 Testing Strategy</h2>
-<p>The Red5 Testing Strategy has 5 components to it:</p>
-<table width="693" border="1">
-  <tr>
-    <th width="8" scope="col">#</th>
-    <th width="121" scope="col">Type</th>
-    <th width="542" scope="col">Description</th>
-  </tr>
-  <tr>
-    <td>1</td>
-    <td>Code</td>
-    <td>Write great code; we've done this from day one and see no reason to stop now.</td>
-  </tr>
-  <tr>
-    <td>2</td>
-    <td>Unit Tests</td>
-    <td><p>Use JUnit to write unit-tests to make sure our code works as expected. Not all objects have Unit Tests, but we certainly encourage people to write them.</p>
-    </td>
-  </tr>
-  <tr>
-    <td>3</td>
-    <td>Functional Tests</td>
-    <td><p>Write functional tests to simulate network interactions.</p>
-    <p> <strong>This is not yet implemented. </strong>We plan to do this in the future using RTMPClient, but any help the community can give here is appreciated.</p></td>
-  </tr>
-  <tr>
-    <td>4</td>
-    <td>System Tests</td>
-    <td>Use flash-based system-tests that make sure end-to-end interaction with Adobe's flash player works as expected. For example, we test that we can connect from Flash via RTMP, we can play back pre-recorded FLV files, and we can publish from a Camera.</td>
-  </tr>
-  <tr>
-    <td>5</td>
-    <td>Continuous Building</td>
-    <td><p>Build and run all tests every time someone checks in to make sure all tests still pass. Currently the continuous server can be found here (but it will move):</p>
-    <pre><a href="http://build.theyard.net/">http://build.theyard.net/</a></pre></td>
-  </tr>
-</table>
-<h2>Red5 Testing Props</h2>
-<p>Major props go to the following folks:</p>
-<ol>
-  <li>The red5 development team because, well, test frameworks don't mean shit if you don't got good stuff to test.</li>
-  <li>Thijs, who set up the initial red5 build server, and showed me how to get get Apache and Tomcat working nicely together.</li>
-</ol>
-<h1>Unit Testing</h1>
-<h2>Purpose</h2>
-The purpose of a unit test is to make sure a java object operates according to its specification, regardless of how it is plugged in with other objects.  For a good overview of check out this <a href="http://en.wikipedia.org/wiki/Unit_test">Wikipedia Unit Testing</a> web page.
-<p>
-For example, you can (and we do) have Unit Tests that test we're encoding and decoding data from AMF codec's correctly using Mock Objects, that test whether or not we can load information from Spring, and whether or not we can inject Meta Data into FLV viles correctly.
-</p>
-<h2>Technology</h2>
-<p>Red5 uses the <a href="http://junit.org/">JUnit</a> unit testing framework. If you're not familiar with that suite, please check it out. It is the de-facto standard for Java Unit Testing.</p>
-<h2>Running Tests</h2>
-<p> To run tests, checkout the latest server build, and run the following ant command: </p>
-<pre>
-ant run-tests
-</pre>
-To see the results, you can open the doc/test/index.html file once the tests are finished.
-<pre>
-firefox doc/test/index.html
-</pre>
-
-<h2>Creating New Tests</h2>
-Writing unit tests in the <a href="http://junit.org/">JUnit</a> framework is beyond the scope of this document, but you can find help at the JUnit site.  The Red5 unit test framework support JUnit 4.0, but can run JUnit 3.x-style tests as well.
-<p>
-To create a new unit test, just create a new <a href="http://junit.org/">JUnit</a> class source file to the right path under test, and end the source filename with the string "Test.java".  For example, to test org.red5.server.api.ANewClass, you would create the following java file under the "test" directory:
-
-<pre>
-test/org/red5/server/api/ANewClassTest.java
-</pre>
-</p>
-Once you do that, the compile process should pick up your new file and run the tests automatically.
-<p>
-By default, the run-tests runs all unit tests in the following directory:
-<pre>
-bin/testcases/testreports</pre>
-<h3>Running unit tests from eclipse</h3>
-In theory every should work, but you may need to set the directory eclipse runs the test from.  Make sure it is set to:
-<pre>
-bin/testcases/testreports
-</pre>
-
-<h2>Guidelines for New Unit Tests</h2>
-<p>Unit tests help make the code base stronger, but that said we do need to make sure that unit tests meet certain guidelines so we can have a useful build process. Those guidelines are:</p>
-<ul>
-  <li> Unit Tests should be self-contained (i.e. each test should run independently).</li>
-  <li>Unit Tests should not require a Red5 server to be running.</li>
-  <li>Unit Tests may assume that no Red5 instance is currently running while they run (and so may fire up Red5 objects that bind to ports if appropriate).</li>
-  <li> Unit Tests should NOT require thread-timing specific to your machine to run (or fail) consistently.</li>
-  <li> Unit Tests must run successfully 100% in order to be checked in.  That means, no checking in tests that fail with &quot;not implemented&quot;.</li>
-  <li> Unit Tests should try to avoid introducing new dependencies, but if you must use one (for example http://multithreadedtc.googlecode.com/ can be useful), identify it when you submit a JUnit test case and we'll review whether or not to add to the ivy test dependencies.</li>
-  <li>Unit Tests should document what they do, and how to tell if they really worked, in JavaDoc comments above each test method.</li>
-</ul>
-  
-<h2>Submitting New Unit Tests</h2>
-<p>We really want new Unit Tests, so if you have a Unit Test that meets the above guidelines we'd love to consider it.  To submit it, do the following:</p>
-<ul>
-  <li>Review the guidelines above. Really.</li>
-  <li>If you're fixing a bug:
-    <ul>
-      <li>Create a unit test and make sure it fails 100% of the time before you fix the bug.</li>
-      <li>Fix the bug.</li>
-      <li>Ensure that unit test succeeds 100% of the time after you fix the bug.</li>
-    </ul>
-  </li>
-  <li>If you're testing a new feature:
-    <ul>
-      <li>Write your new feature.</li>
-      <li>Create a unit test and make it it succeeds 100% of the time with the new feature.</li>
-    </ul>
-  </li>
-  <li>Create a diff file with your patch using &quot;svn diff&quot; from tip of tree.</li>
-  <li>Send e-mail to red5devs@osflash.org attaching the diff files and the contents of any new files, and specify the following:
-    <ul>
-      <li>What the test tests</li>
-      <li>Brief overview of how it works</li>
-    </ul>
-  </li>
-  <li>Someone (probably Art) will review it and get back to you on changes that may be needed, or will commit it.</li>
-</ul>
-<h2>Suggesting New Unit Tests</h2>
-<p>We really do want new unit tests, and would love suggestions. But bear in mind that Red5 is a 100% volunteer project and most people who work on it have full time day jobs (their time spent on red5 is a labor of love). So don't be hurt if your suggestion for a test is not picked up on.</p>
-<p>That said, a great way to suggest an area to test is to go ahead and write the system test yourself! Send it to the list, and it'll probably get a warm reception.</p>
-<h2>Integration Testing</h2>
-<p>We currently don't have a integration testing framework, but when I next return to this area, I'll try adding one. The basic idea for this (which I love) is to make a framework based on the RTMPClient.</p>
-<h2>Purpose</h2>
-<p>The purpose of integration testing is to start to plug together different simpler modules (that hopefully have been unit tested) to see if they play nice together. See this <a href="http://en.wikipedia.org/wiki/Integration_testing">Integration Testing Wikipedia Page </a>for an overview of the concepts.</p>
-<h1>System Testing</h1>
-<h2>Purpose</h2>
-<p>When all is set and done, and you've Unit tested everything, and did integration testing by mixing together different components, you're still not done. At some point, a user is going to pick up your application, and start using it. And if you haven't tested from that end to your code and back, well chances are something will break.</p>
-<p>That's where System Testing comes in. In the System Test we try to do some basic end-to-end tests to see if our code performs as expected from the end-user's perspective.</p>
-<h2>Technology</h2>
-<p>For Flash system testing (a.k.a selftest), we use the <a href="http://asunit.org/">ASUnit </a>framework, which is very similar to JUnit. You can find the current <a href="http://red5.googlecode.com/svn/flash/trunk/selftest/">Flash self test here</a>.</p>
-<p>We also use <a href="http://theyard.googlecode.com/">The Yard Flash Libraries</a> to abstract away some components of Flash connecting and stream playing, but you're not required to use those libraries if you submit new flash unit tests.</p>
-<h2>Running Tests</h2>
-<p>The Red5 system tests require a special test server to be running. This is just a mostly empty red5 server with one special application installed:</p>
-<pre>
-http://localhost/selftest
-</pre>
-<p>There are two ways to run the system test:
-<table width="742" border="1">
-  <tr>
-    <th width="70" scope="col">Type</th>
-    <th width="352" scope="col">Instructions</th>
-    <th width="298" scope="col">Notes</th>
-  </tr>
-  <tr>
-    <td>Attended</td>
-    <td><p>Run a Test Server</p>
-    <pre>ant run-tests-server</pre>
-    <p>Start up the Flash Self Test application</p>
-    <pre>flashplayer tests/fixtures/red5-selftest.swf</pre></td>
-    <td>This method assumes someone is watching the test.</td>
-  </tr>
-  <tr>
-    <td>Unattended</td>
-    <td><pre>ant run-tests-systemtest</pre></td>
-    <td><p>This only works on Linux.</p>
-    <p>It starts up a red5 server, runs the system test in the background, and then collects all log artifacts in the directory &quot;output&quot; relative to the current directory.</p>
-    <p>It will also take snapshop pictures of the desktop as running if ImageMagick's import tool is installed.</p></td>
-  </tr>
-</table>
-<p>System tests run the server with RED5_HOME set to bin/testcases/testreports/dist, and runs the flash clients from the directory bin/testcases/testreports/fixtures.</p>
-<p>Lastly, you should ensure red5 is not currently running on the server you run a system test on. However, because the system tests use their own version of Red5, you don't need to worry about them clobbering anything in your own Red5 installation.</p>
-<p>The System Tests use a series of scripts located in:</p>
-<pre>test/scripts</pre>
-<p>to automatically start-up and shutdown red5, as well as find the necessary flash logs from different parts of the system. The main one of interest is:</p>
-<pre>test/scripts/red5-flash-player-headless</pre>
-<p>It assumes it's running under a Windowing system (e.g. XWindows) with a Bourne Shell, and then starts a clean red5 server, runs the Flash system tests, and cleans up afterwards.</p>
-<h2>Creating New Tests</h2>
-<p>Writing unit tests in the<a href="http://asunit.org/">AsUnit</a> framework is beyond the scope of this document, but you can find help at the AsUnit site.</p>
-<p>But to create a new system test, you can start with the Flash selftest application:</p>
-<pre>svn checkout http://red5.googlecode.com/svn/flash/trunk/selftest red5_selftest</pre>
-<p>To create a new AsUnit test just create a newclass source file to the right path under test, and end the source filename with the string &quot;Test.as&quot;.  For example: </p>
-<pre>
-test/org/red5/server/decodingComplexObjectOverAMFTest3.as</pre>
-<p>Once you do that, the compile process should pick up your new file and run the tests automatically.</p>
-<p>We use <a href="http://theyard.googlecode.com/">The Yard Flash Libraries </a>to abstract away some of the complexities of connecting to and manipulating NetConnection and NetStream objects. See the <a href="http://ofb.net/~aclarke/theyard/flashutils-0.1.0/api/">documentation here</a>. You don't have to use them for new tests, but they can make things a lot easier (for example, by taking care of connecting for you).</p>
-<p>To see documentation of existing tests, run:</p>
-<pre>ant doc</pre>
-<h2>Guidelines for New System Tests</h2>
-<p>Unfortunately Flash ActionScript is not as forgiving as Java is about cleaning up after a test is finished, so the guidelines for writing System Tests are somewhat more involved.</p>
-<ul>
-  <li>System Tests must be self-contained (i.e. each test should run independently).</li>
-  <li>System Tests can assume that a Red5 instance is running on localhost, on port 1935, and that the selftest application is available.</li>
-  <li>System Tests can assume that the selftest application has the Echo service installed.</li>
-  <li>System Tests MUST clean up fully after themselves. That is, they must disconnect and remove any event handlers..</li>
-  <li>System Tests must run successfully 100% in order to be checked in.  That means, no checking in tests that fail with &quot;not implemented&quot;.</li>
-  <li> System Tests should try to avoid introducing new dependencies, but if you must use one (for example http://theyard.googlecode.com/ can be useful), identify it when you submit a test case and we'll review whether or not to add to the ivy test dependencies.</li>
-  <li>System Tests must document what they do, and how to tell if they really worked, in AsDoc comments above each test method.</li>
-</ul>
-<h2>Submitting New System Tests</h2>
-<p>We really want new System Tests, so if you have a System Test that meets the above guidelines we'd love to consider it.  To submit it, do the following:</p>
-<ul>
-  <li>Review the guidelines above. Really.</li>
-  <li>If you're fixing a bug:
-    <ul>
-        <li>Create a system test and make sure it fails 100% of the time before you fix the bug.</li>
-        <li>Fix the bug, and run a new test server.</li>
-        <li>Ensure that unit test succeeds 100% of the time after you fix the bug.</li>
-    </ul>
-  </li>
-  <li>If you're testing a new feature:
-    <ul>
-        <li>Write your new feature.</li>
-      <li>Create a unit test and make it it succeeds 100% of the time with the new feature.</li>
-    </ul>
-  </li>
-  <li>Create a diff file with your patch using &quot;svn diff&quot; from tip of tree.</li>
-  <li>Send e-mail to red5devs@osflash.org attaching the diff files and the contents of any new files, and specify the following:
-    <ul>
-        <li>What the test tests</li>
-      <li>Brief overview of how it works</li>
-    </ul>
-  </li>
-  <li>Someone (probably Art) will review it and get back to you on changes that may be needed, or will commit it.</li>
-</ul>
-If your change is accepted, we'll integrate it into the Flash self-test, and update the Java Server trunk to use the new Flash selftest as our system test.
-<h2>Suggesting New System Tests</h2>
-<p>We really do want new tests, and would love suggestions. But bear in mind that Red5 is a 100% volunteer project and most people who work on it have full time day jobs (their time spent on red5 is a labor of love). So don't be hurt if your suggestion for a test is not picked up on.</p>
-<p>That said, a great way to suggest an area to test is to go ahead and write the system test yourself! Send it to the list, and it'll probably get a warm reception.</p>
-<h1>Continuous Integration</h1>
-<h2>Overview</h2>
-<p>The last step of our testing framework is to run a continuous build. See this <a href="http://en.wikipedia.org/wiki/Continuous_integration">Wikipedia Page </a>for some of the principles involved.</p>
-<p>The basic idea is to do a checkout, run all unit, functional and system tests, and then notify the person who checked in, and any others that are interested, about the current state of the build. The idea is that it is easier to fix bugs when they are introduced, than if they are found days or weeks later.</p>
-<h2>Technology</h2>
-<p>We use <a href="https://hudson.dev.java.net/">Hudson </a>as our continuous build server running inside a Tomcat instance (running as the Hudson, not root, user) that is forwarded to by Apache2. This currently runs on an Amazon EC2 small instance hosted at:</p>
-<pre><a href="http://build.theyard.net/">http://build.theyard.net/</a>
-</pre>
-<p>E-Mail notification of bad builds are sent to the last person who checked in, and to the red5-builds (at) googlecode.com group.</p>
-<p>We run the following builds continuously:</p>
-<ul>
-  <li>We build the java/server/trunk against JDK 1.6 on Linux i386 (Ubuntu) and run all units tests</li>
-  <li>If this is successful, we run all system tests under JDK 1.6 on Linux i386 (Ubuntu) .</li>
-  <li>We build the java/server/trunk against JDK 1.5 on Linux i386 (Ubuntu) and run all unit tests.</li>
-  <li>If this is successful, we run all system tests under JDK 1.5 on Linux i386 (Ubuntu) .
-  </li>
-</ul>
-<h2>How To Run The Continuous Build</h2>
-<p>The Continuous Build server will run any time you check something into the Java Server.  It also runs once every night.</p>
-<p>If you're on the Red5 dev team and want to set up new job, or log-in to hudson directly, talk to Art Clarke and he'll hook you up.</p>
-<h2>How to Submit New Jobs for Continuous Building</h2>
-For now, send a request to red5devs@osflash.org and we'll evaluate it.
-<h2>How you can help with Continuous Building</h2>
-<p>If you're willing do donate a i386 Amazon EC2 instance or an i86_64 Amazon EC2 instance, we're in need of both to do testing on.  The current set up is temporary.</p>
-<h2>How to Set up a Continuous Build Server</h2>
-<p>NOTE: THIS SECTION IS MEANT FOR SERIOUSLY ADVANCED RED5 USERS. 99.999999% of people shouldn't even read this.</p>
-<p>Glad you asked. We used an Amazon EC2 instance to get us started. Specifically this <a href="http://developer.amazonwebservices.com/connect/entry.jspa?externalID=1427&categoryID=101">AMI</a> from Eric Hammon at <a href="http://alestic.com/">alestic.com</a>.</p>
-<p>We then created a script that makes that image into one that can run Red5's continuous build server. See:</p>
-<pre><a href="http://red5.googlecode.com/svn/build/remote/trunk/ec2/">http://red5.googlecode.com/svn/build/remote/trunk/ec2/</a></pre>
-<p>To set up an AWS EC2 instance to build and auto-test red5, do the following:</p>
-<ol>
-  <li>Learn how to use <a href="http://docs.amazonwebservices.com/AWSEC2/2008-05-05/GettingStartedGuide/">Amazon EC2</a>.</li>
-  <li>Start up an instance of <a href="http://alestic.com/">Ubuntu 8.04 LTS Hardy</a>: <a href="http://ec2hardy.notlong.com/">ami-1cd73375</a></li>
-  <li>Check out the Red5 remote build branch:
-  <pre>svn checkout http://red5.googlecode.com/build/remote/trunk/</pre>
-  </li>
-  <li>Copy the ec2/ec2-explode directory to your new Amazon EC2 instance:
-  <pre>
-  cd ec2/ec2-explode
-  ./ec2-implode ../ec2.tgz
-  scp -i YOUR_AWS_KEYPAIR root@YOUR_AWS_PUBLIC_IP:/tmp
-</pre>
-  </li>
-  <li>Log into your AWS EC2 instance:
-  <pre>ssh -i YOUR_AWS_KEYPAIR -l root YOUR_AWS_PUBLIC_IP</pre>
-  </li>
-  <li>Prepare your ec2-explode package:
-  <pre>
-  cd tmp
-  tar xzvf ec2.tgz
-</pre>
-  </li>
-  <li>Run the ec2-explode script:
-  <pre>
-  ./ec2-explode
-</pre>
-  You will have to accept the Sun JDK license, choose a password for your XAuthority file (don't worry -- the X ports aren't opened, you just need that to run a headless X Server to make the Flash System Tests run), and enter the data necessary to send mail from your machine.
-  </li>
-  <li>You'll need to patch up your Apache 2 files to reflect your domain name:
-  <pre>
-  rename /etc/apache2/sites-enabled/build.theyard.net /etc/apache2/sites-enabled/YOUR-APACHE-SITE
-  vi /etc/apache2/sites-enabled/YOUR-APACHE-SITE
-  service apache2 restart</pre>
-  </li>
-  <li>Go to your website and make sure hudson is running:
-  <pre>http://YOUR-AWS-PUBLIC-IP/</pre>
-  </li>
-  <li>It's probably a good idea to change the default "hudson" password as well.  It defaults to:
-  <pre>fmskiller</pre>
-  This is the password for the Hudson UI, not the password on the hudson linux account.  By default the linux hudson account doesn't allow log in using passwords.</li>
-</ol>
-</body>
-
-
-</html>
